--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@uniswap/smart-order-router",
-  "version": "3.35.0",
-  "description": "Uniswap Smart Order Router",
+  "name": "@harshal/smart-order-router",
+  "version": "0.0.1",
+  "description": "Jediswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/smart-order-router.git"
+    "url": "https://github.com/harshal2608/smart-order-router"
   },
   "license": "GPL",
   "keywords": [],
@@ -32,17 +32,17 @@
   },
   "dependencies": {
     "@eth-optimism/sdk": "^3.2.2",
+    "@harshalmaniya/jediswap-default-token-list": "^9.0.0",
+    "@jediswap/token-lists": "^1.0.0-beta.2",
     "@types/brotli": "^1.3.4",
-    "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.3.0",
-    "@uniswap/router-sdk": "^1.9.2",
-    "@uniswap/sdk-core": "^5.3.0",
     "@uniswap/swap-router-contracts": "^1.3.1",
-    "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "^2.2.0",
-    "@uniswap/v2-sdk": "^4.3.2",
-    "@uniswap/v3-sdk": "^3.13.0",
+    "@vnaysn/jediswap-router-sdk": "^16.1.0",
+    "@vnaysn/jediswap-sdk-core": "^11.1.0",
+    "@vnaysn/jediswap-sdk-v2": "^11.1.0",
+    "@vnaysn/jediswap-sdk-v3": "^19.1.0",
+    "@vnaysn/jediswap-universal-router-sdk": "^15.1.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
