--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
     "node-cache": "^5.1.2",
-    "stats-lite": "^2.2.0"
+    "stats-lite": "^2.2.0",
+    "tiny-variant": "^0.0.0"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.4.0",
